tests/paczka1/fuzzy1/60177156.err
Error in line 1: YYEKQ S840 11,5
Error in line 7: zjpcqs S541 79,5
Error in line 21: YYEKQ S840 21,4
Error in line 27: YYEKQ S638 -1,5
Error in line 23: Z3qI A79 43,7
Error in line 29: Z3qI S840 87,8
Error in line 30: AJLf9mAKe S638 5,7
Error in line 31: AZoXsfkBn S638 19,0
Error in line 34: AZoXsfkBn S541 17,2
Error in line 35: AZoXsfkBn A79 4,8
